# bonsai

./: .SRCINFO  .clangd  .gitignore  CMakeLists.txt  PKGBUILD  README.md  main.cpp
include/config/: config.hpp
include/core/: app_data.hpp  scanner.hpp
include/ui/: menu.hpp  modal_confirm.hpp  modal_error.hpp  piechart.hpp
include/utils/: format.hpp
res/: bonsai.default.conf
src/: main.cpp
src/config/: config.hpp
src/core/: app_data.cpp  scanner.cpp  scanner.hpp
src/interface/: piechart.cpp  piechart.hpp  sidebar.cpp  sidebar.hpp
src/interface/modals/: confirm.hpp  error.hpp
src/res/: bonsai.default.conf
src/ui/: menu.cpp  modal_confirm.cpp  modal_error.cpp  piechart.cpp
src/utils/: colors.cpp  colors.hpp  dataformat.cpp  dataformat.hpp
src/widgets/: canvas_ext.cpp  canvas_ext.hpp
ui/: sidebar.cpp
widgets/: canvas_ext.cpp  canvas_ext.hpp
